welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:22: error: identifier expected but '(' found.
  setCouleurBrosse(tab.(getMondeHauteur()-1)
                       ^Array1:25: error: ')' expected but '}' found.
}
^