welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  
	var tab = new Array[Color](getMondeHauteur()) 
  
	for (i <- 1 to getMondeHauteur()-1) {
 	 tab(i) = getCouleurSol();
 	 avance()
	} //remplissage du tableau
  
  avance()
  gauche()
  avance()
  droite()
  
  for (n <- tab) {
   	setCouleurBrosse(n);
   	baisseBrosse();
   	leveBrosse();
   	avance()
 	}
  setCouleurBrosse(tab.(getMondeHauteur()-1)
	baisseBrosse()
	leveBrosse()//fais une colonne
}

